# auto-add-lifetimes-to-impl

./: Cargo.toml  README.md
.github/workflows/: crates.yml  rust.yml
examples/: main.rs
src/: lib.rs
