[package]
name = "auto-add-lifetimes-to-impl"
version = "0.0.0"
edition = "2018"
description = "Automatically add lifetimes to impl given the trait, structure or any arguments have lifetime arguments. Mainly for use in macros"
authors = [ "Ben <kaleidawave@gmail.com>" ]
repository = "https://github.com/kaleidawave/auto-add-lifetimes-to-impl"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.82", features = ["printing", "full", "extra-traits"] }
quote = "1.0.10"
proc-macro2 = "1.0.32"
